<resources>
    <string name="app_name" translatable="false">Gun Simulator</string>
    <string name="play">Play</string>
    <string name="gun">Gun</string>
    <string name="gun_simulator">Gun Simulator</string>
    <string name="shock_taser">Shock Taser</string>
    <string name="light_saber">Light Saber</string>
    <string name="explosion">Explosion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="policy_private">Policy Private</string>
    <string name="email">cemsoftware.contact@gmail.com</string>
    <string name="term_of_use">Term of use</string>
    <string name="collection">Collection</string>
    <string name="no_item">No item</string>
    <string name="single_shot">SINGLE SHOT</string>
    <string name="burst_mode">BURST MODE</string>
    <string name="auto_hold">AUTO (HOLD)</string>
    <string name="shake">Shake</string>
    <string name="place_of_origin">Place of Origin:</string>
    <string name="in_service">In service:</string>
    <string name="designed">Designed:</string>
    <string name="length">Length:</string>
    <string name="notify_charge_battery">The power has run out,\nCharge it to use</string>
    <string name="charge">Charge</string>
    <string name="warning">WARNING</string>
    <string name="vibrate">Vibrate</string>
    <string name="flash">Flash</string>
    <string name="sound">Sound</string>
    <string name="favorite">Favorite</string>
    <string name="this_action_can_contain_ads">This action can contain ads!</string>
    <string name="txt_machine_gun">Machine Gun</string>
    <string name="you_bullets_are_out">Your bullets are out</string>
    <string name="you_grenades_are_out">Your grenades are out</string>
    <string name="reload">Reload</string>
    <string name="network_connection">Network Connection</string>
    <string name="network_connection_off">Network connection is Off</string>
    <string name="network_connection_content">Please turn on the network\n to experience all the awesome features.</string>
    <string name="turn_on_network">Turn on</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="do_you_wanna_try_another">Do you wanna try another?</string>
    <string name="accept">Accept</string>
    <string name="background">Background</string>
    <string name="watch_ads">Watch ad to unlock the skin</string>
    <string name="unlock">Unlock</string>
    <string name="if_you_enjoy_our_app">If You Enjoy Our App</string>
    <string name="would_you_mind_rating_us">Would you mind rating us?</string>
    <string name="rate_now">Rate now</string>
    <string name="maybe_later">Maybe later</string>
    <string name="rating_our_app">Rating Our App</string>
    <string name="machine_gun_simulator">machine gun simulator</string>
    <string name="unleash_the_power_of_various_weapons">unleash the power \nof various weapons</string>
    <string name="next">Next</string>
    <string name="shock_taser_light_saber"><![CDATA[Shock taser & Light Saber]]></string>
    <string name="txt_content_preview_2">Experience the thrill of shock \ntaser and lightsaber simulations</string>
    <string name="skin_gun">Skin Gun</string>
    <string name="back">Back</string>
    <string name="gun_shot_sound">Gun Shot Sound</string>
    <string name="language">Language</string>
    <string name="device_does_not_sp">The device does not support the shake feature</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="common_error">An error occurred, please check again</string>
</resources>